--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
   </head>
   <body>
     <h1>hello</h1>
+    <h2>bhai</h2>
+    <h3>happy</h3>
+    <h4>holi</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
+    
     </body>
 </html>
