--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h4>holi</h4>
     <h5>hello</h5>
     <h6>hello</h6>
+    <table>
+      <tr><td>name</td> <td>yash ji</td></tr>
+      </table>
     
     </body>
 </html>
