--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h4>holi</h4>
     <h5>hello</h5>
     <h6>hello</h6>
-    <table>
+    <table width="100%">
       <tr><td>name</td> <td>yash ji</td></tr>
       </table>
     
