--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <title>this is my first page</title>
   </head>
   <body>
-    <h1>hello</h1>
-    <h2>bhai</h2>
-    <h3>happy</h3>
-    <h4>holi</h4>
-    <h5>hello</h5>
-    <h6>hello</h6>
+    <h1>this is my first page</h1>
+    
     <table width="100%" border="1">
       <tr><td>name</td> <td>yash ji</td></tr>
+      <tr><td>address</td> <td>hapur</td></tr>
+      <tr><td>contactno</td> <td>9634649141</td></tr>
       </table>
     
     </body>
