--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>this is my first page</title>
   </head>
-  <body style="background-color:lightblue:text-align:center">
+  <body style="background-color:skyblue:text-align:center">
     <h1>this is my first page</h1>
     
     <table width="100%" border="1">
