--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1>this is my first page</h1>
     
     <table width="100%" border="1">
-      <tr><td>name</td> <td>yash ji</td></tr>
-      <tr><td>address</td> <td>hapur</td></tr>
-      <tr><td>contactno</td> <td>9634649141</td></tr>
+      <tr><td width="25%">name</td> <td width="35%">yash ji</td></tr>
+      <tr><td width"25%">address</td> <td width="35%">hapur</td></tr>
+      <tr><td width="25%">contactno</td> <td width="35%">9634649141</td></tr>
       </table>
     
     </body>
