--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr><td width"25%">address</td> <td width="35%">hapur</td></tr>
       <tr><td width="25%">contactno</td> <td width="35%">9634649141</td></tr>
       </table>
-    <iframe src="https:/www.abes.ac.in" height="500px" width="500px" width="800px"></iframe>
+    <iframe src="https://www.abes.ac.in" height="500px" width="500px" width="800px"></iframe>
     
     </body>
 </html>
