--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <tr><td width="25%">contactno</td> <td width="35%">9634649141</td></tr>
       </table>
     <iframe src="https://www.abes.ac.in" height="500px" width="500px" width="800px"></iframe>
-    <p>thanks for visit page::::::HAPPY HOLI::::::::KINDLY WAIT FOR FURTHER DEVELOPMENT ABES ENGINEERING COLLEGE GHAZIABAD NEAR NH24 CROSSSING</p>
+    <p>thanks for visit page::::::HAPPY HOLI::::::::</br><strong>KINDLY WAIT FOR FURTHER DEVELOPMENT ABES ENGINEERING COLLEGE GHAZIABAD NEAR NH24 CROSSSING</strong></p>
     
     </body>
 </html>
