--- a/home.html
+++ b/home.html
@@ -4,7 +4,18 @@
     </title>
   </head>
 <body>
-  <img src="logo1.png">
+  <div id="header">
+    <table width=100% border=1>
+      <tr> <td>logo <img src="logo1.png"> </td>home <td>about us</td> <td>contact</td> <td></td>
+      </tr>
+      </table>
+    
+    </div>
+  <div id="content">
+    
+  
+  </div>
+  
   
   </body>
   </html>
