--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 <body>
   <div id="header">
     <table width=100% border=1>
-      <tr> <td width=40%> <img src="logo1.png"></td> <td width=20%>logo  </td>home <td width=20%>about us</td> <td width=20%>contact</td> 
+      <tr> <td width=40%> <img src="logo1.png"></td> <td width=20%>logo  </td> <td width=20%>about us</td> <td width=20%>contact</td> 
       </tr>
       </table>
     
