--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="icon" href="">
+    <link rel="icon" href="favicon.ico">
   <title>homepage
     </title>
   </head>
