--- a/home.html
+++ b/home.html
@@ -7,7 +7,12 @@
 <body>
   <div id="header">
     <table width=100% border=1>
-      <tr> <td width=40%> <img src="logo1.png"></td> <td width=20%>logo  </td> <td width=20%>about us</td> <td width=20%>contact</td> 
+      <tr>
+    
+        <td width=20%>logo  </td> 
+        <td width=20%> <a href="index.html" target="iframe1"> home</a></td>
+        <td width=20%> <a href="index.html" target="iframe1">about us</a></td> 
+        <td width=20%> <a href="index.html" target="iframe1">contact</a></td> 
       </tr>
       </table>
     
