--- a/home.html
+++ b/home.html
@@ -11,14 +11,14 @@
     
         <td width=20%>logo  </td> 
         <td width=20%> <a href="index.html" target="iframe1"> home</a></td>
-        <td width=20%> <a href="index.html" target="iframe1">about us</a></td> 
-        <td width=20%> <a href="index.html" target="iframe1">contact</a></td> 
+        <td width=20%> <a href="aboutus.html" target="iframe1">about us</a></td> 
+        <td width=20%> <a href="contact.html" target="iframe1">contact</a></td> 
       </tr>
       </table>
     
     </div>
   <div id="content">
-    <iframe src="https://www.abes.ac.in" height="500px" width="800px">
+    <iframe href="" name="iframe1" height="500px" width="800px">
   
   </div>
   
